--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-player": "^2.16.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
