--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.19.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "zustand": "^5.0.3"
